--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ bazel-*
 # Coverage file
 coverage.xml
 
+# Xcode test results
+*.xcresult
+
 # Fastlane artifacts (anywhere in repo)
 **/fastlane/report.xml
 **/fastlane/Preview.html
